infrastructure/components/longhorn/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route
  namespace: longhorn-system
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
  hostnames:
    - longhorn.internal.zinkithink.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-redirect
  namespace: longhorn-system
spec:
  parentRefs:
  - name: default-gateway
    sectionName: http
    namespace: default
  hostnames:
  - longhorn.internal.zinkithink.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
